<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="E_CtrlId" Id="{fbb9f2d2-c911-4ba8-bff4-7e84f684cb30}">
    <Declaration><![CDATA[TYPE E_CtrlId :
(
	///not defined after startup...
	NONE,
	ICL_1,
	MER_2,
	MER_3,
	MER_15,
	SLB_2a,
	DSB1_2a,
	DSB2_2a,
	SEP_2a,
	SLB_2b,
	DSB1_2b,
	DSB2_2b,
	SEP_2b,
	SLB_2c,
	DSB1_2c,
	DSB2_2c,
	SEP_2c,
	BUF_5,
	SBI_5,	
	DBO_5,
	BUF_3,
	SBI_3,
	SBO_3,
	BUF_16,
	SBI_16,
//	SBO_10,
	DPJ_4,
	RFW_4,
	RFD_4,
	JUN_4a,
	JUN_4b,
	JUN_5a,
	JUN_5b,
	JUN_6a,
	JUN_6b,
	SLB_12,
	SEP_12,
	SLB_13,
	SEP_13,
	SLB_14,
	SEP_14,
	DPJ_15,
	RFW_15,
	RFD_15,
	JUN_15a,
	JUN_15b,
	TLC_2,
	TLP_3,
	TLP_16,
	TLP_4,
	TLP_5,
	CHD_4,
	TLK_15,
	E_CtrlIdMax
);
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>