<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_CHD" Id="{e8880532-6250-42f6-8d8e-08ed57a9247a}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_CHD :
STRUCT
	///configuration
	Cfg: T_Ctrl_SIf_CHD_Cfg;
	///parameter
	Par: T_Ctrl_SIf_CHD_Par;
	///current values
	Cur: T_Ctrl_SIf_CHD_Cur;
	///io input
	In: T_Ctrl_SIf_CHD_In;
	///io output
	Out: T_Ctrl_SIf_CHD_Out;
	///alarm number used in this controller
	Alm: ARRAY[1..4] OF T_Ctrl_Alm;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>