<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_CHD_Cfg" Id="{f36d5ffb-8947-427c-8bda-7182741397c5}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_CHD_Cfg :
STRUCT
	/// Option called "Schiefe Bügel"
	bolHasInconsistentHangerSensor: BOOL;
	/// Option called "Leerbügelerkennung"
	bolHasEmptyHangerSensor: BOOL;
	/// Option
	bolHasSlideFullSensor: BOOL;
	/// Option
	bolStopAtRejact: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>