<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_CHD_Par" Id="{3289efa4-9885-491f-87c5-95fbc6b9c087}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_CHD_Par :
STRUCT
	///[ms] until junction is open
	udiOpenTime_ms: UDINT;
	///[ms] until junction is closed
	udiCloseTime_ms: UDINT;
	///[ms] until failure timeout passing sensor is set?
	udiPassTime_ms: UDINT;
	///[ms] simulation time for passing the stopper or /2 of timeout time?
	udiSimPassTime_ms: UDINT;
	/// [um] Position of the junction
	dinPosition_um: DINT;
	/// [um] Distance from open to close position
	dinOpenWay_um: DINT;
	/// [um] Distance from first to last sensor
	dinDistanceBetweenSensors_um: DINT;
	/// [um] PinDistance
	dinPinDistance_um: DINT;
	/// [ms] Time until jam at slide detected
	udinTimeUntilJam_ms: UDINT;
	/// [ms] Valve open time
	udiPulseLengthBlowValve_ms: UDINT;
	/// [ms] Valve closed time
	udiIntervalLengthBlowValve_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>