<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_JUN" Id="{78d0d78b-ee49-48f8-83e7-cd7e94918592}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_JUN :
STRUCT
	///configuration
	Cfg: T_Ctrl_SIf_JUN_Cfg;
	///parameter
	Par: T_Ctrl_SIf_JUN_Par;
	///current values
	Cur: T_Ctrl_SIf_JUN_Cur;
	///io input
	In: T_Ctrl_SIf_JUN_In;
	///io output
	Out: T_Ctrl_SIf_JUN_Out;
	///alarm number used in this controller
	Alm: ARRAY[1..4] OF T_Ctrl_Alm;
	///interlock of output/movements
	Ilk: T_Ctrl_SIf_JUN_Ilk;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>