<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_JUN_Cfg" Id="{ec947af7-e5c8-41dd-a039-9f6f11c97848}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_JUN_Cfg :
STRUCT
	eTyp: E_Typ_JUN;
	/// Number of the target
	dinTargetNr: DINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>